<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.2.5</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>
  <groupId>bmv.pushca</groupId>
  <artifactId>binary-proxy</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>binary-proxy</name>
  <description>Proxy binaries published via Pushca web socket</description>
  <properties>
    <java.version>17</java.version>
    <fasterxml.jackson.version>2.14.2</fasterxml.jackson.version>
    <testcontainers.version>1.20.0</testcontainers.version>
    <java-websocket.version>1.5.6</java-websocket.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.fasterxml.jackson</groupId>
        <artifactId>jackson-bom</artifactId>
        <version>${fasterxml.jackson.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>testcontainers-bom</artifactId>
        <version>${testcontainers.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.java-websocket</groupId>
        <artifactId>Java-WebSocket</artifactId>
        <version>${java-websocket.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-webflux</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-xml</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jdk8</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jsr310</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.module</groupId>
      <artifactId>jackson-module-parameter-names</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-cbor</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.uuid</groupId>
      <artifactId>java-uuid-generator</artifactId>
      <version>5.1.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.12.0</version>
    </dependency>
    <dependency>
      <groupId>com.nimbusds</groupId>
      <artifactId>nimbus-jose-jwt</artifactId>
      <version>9.40</version>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk18on</artifactId>
      <version>1.78.1</version>
    </dependency>
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.17.1</version>
    </dependency>
    <dependency>
      <groupId>com.ip2location</groupId>
      <artifactId>ip2location-java</artifactId>
      <version>8.12.0</version>
    </dependency>
    <dependency>
      <groupId>com.ip2proxy</groupId>
      <artifactId>ip2proxy-java</artifactId>
      <version>3.4.0</version>
    </dependency>
    <dependency>
      <groupId>eu.eu-emi.security</groupId>
      <artifactId>canl</artifactId>
      <version>2.8.3</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.projectreactor</groupId>
      <artifactId>reactor-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.graalvm.buildtools</groupId>
        <artifactId>native-maven-plugin</artifactId>
        <version>0.9.28</version>
        <configuration>
          <imageName>binary-proxy</imageName>
          <jvmArgs>
            <arg>-Xss512k</arg>
            <arg>-XX:MaxRAMPercentage=80</arg>
            <arg>-Djava.security.egd=file:/dev/./urandom</arg>
            <arg>-Djava.security.properties=file:src/main/resources/security/java.security</arg>
            <arg>-Dorg.graalvm.nativeimage.lang.charset=IncludeAllTimeZonesAndCharsets</arg>
          </jvmArgs>
          <buildArgs>
            <buildArg>-H:IncludeResources=".*.yaml|.*.yml|.*.sh|.*.properties|.*.security"
            </buildArg>
            <buildArg>-H:+ReportUnsupportedElementsAtRuntime</buildArg>
            <buildArg>-H:TraceClassInitialization=true</buildArg>
            <buildArg>-H:+ReportExceptionStackTraces</buildArg>
            <buildArg>-H:Path=/usr/bin/openssl</buildArg>
            <buildArg>-H:+AddAllCharsets</buildArg>
            <buildArg>--allow-incomplete-classpath</buildArg>
            <buildArg>--verbose</buildArg>
            <buildArg>--enable-http</buildArg>
            <buildArg>--enable-https</buildArg>
            <buildArg>--enable-url-protocols=http,https</buildArg>
            <buildArg>-H:ReflectionConfigurationFiles=src/main/resources/reflection-config.json
            </buildArg>
            <buildArg>
              --initialize-at-build-time=redis.clients.jedis.Jedis,redis.clients.jedis.util.JedisMetaInfo,redis.clients.jedis.JedisMetaInfo,ch.qos.logback,org.slf4j,com.ctc.wstx,org.bouncycastle
            </buildArg>
            <buildArg>
              --initialize-at-run-time=bmv.pushca.binary.proxy.encryption,org.bouncycastle.jcajce.provider.drbg.DRBG$Default,org.bouncycastle.jcajce.provider.drbg.DRBG$NonceAndIV
            </buildArg>
            <buildArg>
              --trace-object-instantiation=org.bouncycastle.crypto.prng.SP800SecureRandom
            </buildArg>
          </buildArgs>
          <resourceIncludedPatterns>
            <include>**/*.properties</include>
            <include>**/*.xml</include>
            <include>**/*.yaml</include>
            <include>**/*.yml</include>
            <include>security/java.security</include>
          </resourceIncludedPatterns>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
    </plugins>
    <finalName>binary-proxy</finalName>
  </build>

  <!--<build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>-->

</project>
